# perimeter81-api

./: README.md  api.py  createGroups.py  groups.xlsx  main.py  model.py  requirements.txt  setup.cfg  setup.py
docs/: api.html  index.html  model.html
docs/docs/source/: conf.html  index.html
html/perimeter81-api/: index.html  main.html
src/: __init__.py  api.py  model.py
src/p81api/: api.py  model.py
test/p81api_tests/: nagios_config_generator.py  test_hello_p81_api.py
