[metadata]
name = p81api
version = 0.7
author = Avishay Balderman
author_email = avishay.balderman@perimeter81.com
description = A thin python wrapper of Perimeter81 public API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vladbekker-p81/perimeter81-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src